fixed overlap

--- a/Assignment2/exercise3.css
+++ b/Assignment2/exercise3.css
@@ -40,6 +40,7 @@ a {
 #background-content, #family-content {
     display: flex;
     justify-content: center;
+    height: auto;
 }
 
 #pittsburgh, #swimming, #school {
@@ -48,6 +49,12 @@ a {
 
 img {
     height: 200px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
+figcaption {
+    text-align: center;
+    margin-top: 10px;
+}
 
